# SageLang

./: .aider.chat.history.md  .aider.input.history  .config.old  .gemini  .gitignore  .gitmodules  .tmp.asm  .tmp_repro_p1_final  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXCEPTIONS_GUIDE.md  EXCEPTION_REFACTORING.md  GEMINI.md  GENERATORS_GUIDE.md  GENERATOR_IMPLEMENTATION.md  INTERPRETER_EXCEPTIONS.md  Kconfig  Makefile  Makefile.bak  PHASE4_COMPLETE.md  PHASE4_SUMMARY.md  PHASE5_COMPLETE.md  PHASE5_SUMMARY.md  PHASE7_PLAN.md  PHASE7_STATUS.md  PHASE8_GUIDE.md  PHASE8_STATUS.md  README.md  ROADMAP.md  SECURITY.md  STABILITY.md  SageLang.md  UPDATES.md  autoformat.py  bench  bench_aot  bench_aot_jit  bench_aot_saved2.c  bench_jit  (+89 more)
.aider.tags.cache.v4/: cache.db
.antigravitycli/: fdace399-56fe-4e65-8cf9-c7a7c073558e.json
.github/ISSUE_TEMPLATE/: custom.md
.jules/: bolt.md  sagekeeper.md  sentinel.md
.tmp/: gc_scope_test.sage
C++/: demo.sage
OIS/: OIS.conf  OIS.conf.template  OIS.sh
OIS/core/: builder.sh  conf.sh  integrate.sh  registry.sh  updater.sh
SageChain/: README.md
SageChain/src/: explorer.sage  node.sage
assets/charts/: loc-metrics.json
benchmarks/: 02_loop_sum.py  02_loop_sum.sage  06_class_method.sage  08_exception_handling.py  08_exception_handling.sage  backend_compare.sage  run_backend_compare.sh
boards/: pico_gpio.c
build_os/: bootx64.efi  esp.img  kernel.elf  kernel_unified.sage  make_img.sage
build_sage/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  sage
build_x86_64/: boot.S  linker.ld
core/: CMakeLists.txt  Dockerfile.sage  Makefile  README.md  build.sh  sage  sage-lsp  sage_test  sgvm  sgvmc
core/.tmp/: compiler_arch  compiler_arrays  compiler_arrays.c  compiler_classes  compiler_constfold  compiler_dce  compiler_dicts  compiler_exceptions  compiler_for_loops  compiler_inline  compiler_memory  compiler_modules  compiler_optlevels_o0  compiler_optlevels_o1  compiler_optlevels_o2  compiler_optlevels_o3  compiler_smoke  compiler_smoke.c  compiler_smoke.ll  compiler_smoke.s  compiler_smoke_debug  compiler_smoke_llvm  compiler_strings  compiler_structs  compiler_tuples  fmt_dirty.sage  hello_pico.c  kt_emit_classes.kt  kt_emit_super.kt  kt_import_test.kt  kt_import_test.sage  lint_bad.sage  lint_clean.sage  llvm_features  sage_test_stdlib_io.txt
core/SageFetch/: fetch.sgvm  fetch.srvm  main.sage.svm
core/build_dev/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  sage  sage-lsp
core/build_sage/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  sage
core/docs/: Agent_Chat_Guide.md  Baremetal_OSDev_UEFI_Guide.md  Build_Guide.md  CLI_Reference.md  Concurrency_Guide.md  Cryptography_Guide.md  Import_Semantics.md  SGVM_Guide.md  (+9 more)
docs/: sagelang-book.md
documentation/: Agent_Chat_Guide.md  Android_Guide.md  Baremetal_OSDev_UEFI_Guide.md  Blockchain.md  Bytecode_VM_Sketch.md  Cryptography_Guide.md  FAT_Filesystem_Guide.md  GC_Guide.md  Import_Semantics.md  LLM_Guide.md  ML_CUDA_Guide.md  Networking_Guide.md  Safety_Guide.md  SageLang_Guide.md  StdLib_Guide.md  Vulkan_GPU_Guide.md
editors/: sage.tmLanguage.json
examples/: and.sage  blockchain_cli.sage  blockchain_contract_demo.sage  blockchain_db_demo.sage  blockchain_demo.sage  blockchain_nft_demo.sage  blockchain_orbit_demo.sage  blockchain_performance_demo.sage  blockchain_poa_demo.sage  blockchain_wallet_demo.sage  data_structures.sage  debug.sage  defer_example.sage  dict_demo.sage  exceptions.sage  for_loop.sage  gpu_cube.sage  gpu_galaxy.sage  gpu_hello3d.sage  gpu_nbody.sage  gpu_pbr.sage  gpu_phong.sage  gpu_planet.sage  gpu_solarsystem.sage  guess.sage  logical.sage  match_example.sage  math.sage  phase4_gc_demo.sage  phase5_demo.sage  phase6_classes.sage  phase6_simple.sage  phase8_imports.sage  return.sage  test.sage  test_imports.sage  test_suite.sage  variables.sage
imports/: math.sage
include/: ast.h  codegen.h  compiler.h  env.h  gc.h  graphics.h  interpreter.h  lexer.h  module.h  repl.h  sage_thread.h  token.h  value.h
lenovo_300e_build/: patch.sh
lib/: arrays.sage  assert.sage  camera.sage  camera_relative.sage  dicts.sage  gltf.sage  gpu.sage  iter.sage  json.sage  lod.sage  material.sage  math.sage  math3d.sage  mesh.sage  octree.sage  renderer.sage  safety.sage  scene.sage  shadows.sage  stats.sage  strings.sage  utils.sage  vulkan.sage
minimal_os/: .tmp.svm  PoC_README.md  boot.s  boot.sage  build.sh  kernel.c  kernel.elf  kernel.sage  kernel.sgvm  run.sh
models/: Modelfile  ai_builder.sage  build_sagellm  build_sagellm.ll  build_sagellm.sage  inspect_model.sage  quick_test.sage  sagellm_chatbot  sagellm_chatbot.ll  sagellm_chatbot.sage  sl_tq_llm.weights  sl_tq_llm_chat.sage  test_output.sage  train_full.sage  train_sagegpt.sage  train_sl_tq_llm.sage
sage_ide/: app.sage  build.sh
sageos_build/: BOOTX64.EFI  build_kernel.sh  esp.img  kernel.elf
scripts/: benchmark_recipes.py  benchmark_runtimes.py  benchmark_vs_python.py  build_os_unified.sh  generate_backend_chart.py  generate_loc_charts.py  kconfig_to_make.py
self_host/: interpreter.sage  lexer.sage  parser.sage  sage.sage  test_parser.sage
src/: App.tsx  Makefile  ast.c  codegen.c  compiler.c  constfold.c  dce.c  env.c  gc.c  heartbeat.c  inline.c  interpreter.c  lexer.c  llvm_backend.c  main.c  module.c  parser.c  pass.c  sage.c  sage_compiler.c  stdlib.c  typecheck.c  value.c
templates/: CONTRIBUTING.md  README.md
testing/: llvm_features.expected  llvm_features.sage  test.sage
tests/: atomic_init_test.sage  bench_url.sage  check_behavior.sage  gpio_interrupt_test.sage  os_sync_rwlock_test.sage  os_sync_test.sage  run_tests.sh  sandbox_leak_test.sage  sandbox_security_test.sage  security_io_test.sage  signal_test.sage  sys_injection_test.sage  test_anon_proc.sage  test_forge_signals.sage  test_linux_signals.sage  test_metal_core_forge.sage  test_signals_smoke.sage  test_submodule_import.sage  test_transpiler.sage  test_url_bolt.sage  test_url_extended.sage  test_user_api.sage
testsuite/: run_all.sh
(+531 files in other folders)
